--- a/accounts/templates/accounts/order_list.html
+++ b/accounts/templates/accounts/order_list.html
@@ -14,7 +14,7 @@
     <!-- Breadcrumb Navigation -->
   <nav aria-label="breadcrumb" id="breadcrumb-main">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="{% url 'home' %}">Admin Dashboard</a></li>
+      <li class="breadcrumb-item"><a href="{% url 'accounts:admin_dashboard' %}">Admin Dashboard</a></li>
       <li class="breadcrumb-item active" aria-current="page">All Orders</li>
     </ol>
   </nav>
