--- a/templates/base.html
+++ b/templates/base.html
@@ -145,7 +145,7 @@
                 {% else %}
                 <li><a href="{% url 'account_login' %}">Login</a></li>
                 {% endif %}
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="{% url 'contact:contact' %}">Contact</a></li>
               </ul>
             </div>
             <div class="col-md-3 mb-4 mb-md-0">
