added in css for 404 page

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,94 +30,97 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    {% endblock %} {% block extra_css %}
+    {% endblock %} 
+    
+    {% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     {% endblock %}
+
   </head>
   <body>
     <div class="wrapper d-flex flex-column">
-<!-- Header -->
-<header class="fixed-top">
-  <nav class="navbar navbar-expand-lg navbar-dark container-fluid">
-    <!-- Brand -->
-    <div class="navbar-brand-container">
-      <a class="navbar-brand" href="{% url 'home' %}">Strum & Strings</a>
-    </div>
+      <!-- Header -->
+      <header class="fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark container-fluid">
+          <!-- Brand -->
+          <div class="navbar-brand-container">
+            <a class="navbar-brand" href="{% url 'home' %}">Strum & Strings</a>
+          </div>
 
-    <!-- Burger Menu -->
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-      style="margin-left: 25px"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
+          <!-- Burger Menu -->
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+            style="margin-left: 25px"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-    <!-- Navigation Content -->
-    <div class="collapse navbar-collapse w-100" id="navbarNav">
-      <div class="d-flex justify-content-between align-items-center w-100 flex-wrap flex-lg-nowrap">
+          <!-- Navigation Content -->
+          <div class="collapse navbar-collapse w-100" id="navbarNav">
+            <div class="d-flex justify-content-between align-items-center w-100 flex-wrap flex-lg-nowrap">
 
-        <!-- Nav Links (Right Side) -->
-        <ul class="navbar-nav order-2 order-lg-3 ms-auto mb-2 mb-lg-0 text-center">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'products:products_list' %}">Shop</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'categories:categories_list' %}">Categories</a>
-          </li>
-          {% if user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'accounts:profile' %}">Welcome, {{ user.username }}</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-          </li>
-          {% if user.is_staff %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'accounts:admin_dashboard' %}">Admin Dashboard</a>
-          </li>
-          {% endif %}
-          {% else %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
-          </li>
-          {% endif %}
-          <li class="nav-item">
-            <a class="nav-link position-relative" href="{% url 'cart:view_cart' %}">
-              Cart
-              {% if cart_item_count > 0 %}
-              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                {{ cart_item_count }}
-              </span>
-              {% endif %}
-            </a>
-          </li>
-        </ul>
+              <!-- Nav Links (Right Side) -->
+              <ul class="navbar-nav order-2 order-lg-3 ms-auto mb-2 mb-lg-0 text-center">
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'products:products_list' %}">Shop</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'categories:categories_list' %}">Categories</a>
+                </li>
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'accounts:profile' %}">Welcome, {{ user.username }}</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                </li>
+                {% if user.is_staff %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'accounts:admin_dashboard' %}">Admin Dashboard</a>
+                </li>
+                {% endif %}
+                {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+                </li>
+                {% endif %}
+                <li class="nav-item">
+                  <a class="nav-link position-relative" href="{% url 'cart:view_cart' %}">
+                    Cart
+                    {% if cart_item_count > 0 %}
+                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                      {{ cart_item_count }}
+                    </span>
+                    {% endif %}
+                  </a>
+                </li>
+              </ul>
 
-        <!-- Search (Center) -->
-        <form class="d-flex mx-auto order-1 order-lg-2 search-bar" method="get" action="{% url 'products:products_list' %}">
-          <input
-            class="form-control me-2"
-            type="search"
-            name="q"
-            placeholder="Search"
-            aria-label="Search"
-            value="{{ query|default:'' }}"
-          />
-          <button class="btn btn-custom-search" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
-</header>
+              <!-- Search (Center) -->
+              <form class="d-flex mx-auto order-1 order-lg-2 search-bar" method="get" action="{% url 'products:products_list' %}">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  name="q"
+                  placeholder="Search"
+                  aria-label="Search"
+                  value="{{ query|default:'' }}"
+                />
+                <button class="btn btn-custom-search" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+      </header>
 
 
       <main class="{% block main_class %}flex-grow-1{% endblock %}">
