--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -2,6 +2,15 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block meta_description %}
+  <meta name="description" content="View and manage your Strum & Strings profile, including personal details and order history.">
+{% endblock %}
+
+{% block meta_keywords %}
+  <meta name="keywords" content="user profile, order history, account details, Strum & Strings profile">
+{% endblock %}
+
+
 {% block title %}My Profile – Strum & Strings{% endblock %}
 {% block main_class %}container-fluid py-5{% endblock %}
 
