--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block meta_description %}
+  <meta name="description" content="Have questions or feedback? Contact Strum & Strings – we're here to help with your guitar needs.">
+{% endblock %}
+
+{% block meta_keywords %}
+  <meta name="keywords" content="contact Strum & Strings, customer support, guitar shop contact, music store help">
+{% endblock %}
+
+
 {% block title %}Contact Us – Strum & Strings{% endblock %}
 {% block main_class %}container py-5 mt-5{% endblock %}
 
