--- a/templates/base.html
+++ b/templates/base.html
@@ -6,14 +6,20 @@
     {% block meta %}
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Strum & Strings is your one-stop shop for guitars, accessories, and more."
-    />
-    <meta
-      name="keywords"
-      content="guitars, musical instruments, accessories, acoustic, electric, music gear"
-    />
+    {% block meta_description %}
+      <meta
+        name="description"
+        content="Strum & Strings is your one-stop shop for guitars, accessories, and more."
+      />
+    {% endblock %}
+
+    {% block meta_keywords %}
+      <meta
+        name="keywords"
+        content="guitars, musical instruments, accessories, acoustic, electric, music gear"
+      />
+    {% endblock %}
+
     <meta name="author" content="Strum & Strings" />
     {% endblock %} {% block canonical %}
     <link rel="canonical" href="{{ request.build_absolute_uri }}" />
