--- a/templates/base.html
+++ b/templates/base.html
@@ -4,25 +4,25 @@
 <html lang="en">
   <head>
     {% block meta %}
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block meta_description %}
       <meta
         name="description"
         content="Strum & Strings is your one-stop shop for guitars, accessories, and more."
-      />
+      >
     {% endblock %}
 
     {% block meta_keywords %}
       <meta
         name="keywords"
         content="guitars, musical instruments, accessories, acoustic, electric, music gear"
-      />
+      >
     {% endblock %}
 
-    <meta name="author" content="Strum & Strings" />
+    <meta name="author" content="Strum & Strings">
     {% endblock %} {% block canonical %}
-    <link rel="canonical" href="{{ request.build_absolute_uri }}" />
+    <link rel="canonical" href="{{ request.build_absolute_uri }}">
     {% endblock %}
 
     <title>{% block title %}Strum & Strings{% endblock %}</title>
@@ -31,15 +31,15 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
+    >
     {% endblock %} 
     
     {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
   </head>
